<resources>
    <string name="app_name">Mi Mundo</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="title_section5">Section 5</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_validar_creacion">Validar Linea</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prueba">LoginActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="nav_saldo_icons">ic_home1</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="operacion_exitosa">Operación exitosa</string>
    <string name="error_operacion">Error al ejecutar la operación</string>
    <string name="error_obtener_datos">Problemas al obtener los datos</string>
    <string name="error_actualizar_datos">Problemas al actualizar los datos</string>
    <string name="no_hay_datos">No se encontraron datos</string>
    <string name="ejecutando_operacion">Ejecutando la operación</string>
    <string name="error_obtener_datos_telefono">Problemas al obtener los planes del teléfono</string>
    <string name="error_obtener_datos_plan">Problemas al obtener los datos del plan</string>
    <string name="sin_saldo">Sin saldo</string>
    <string name="salir_app">Desea salir de la aplicacion?</string>
    <string name="activacion_title">Activación</string>
    <string name="desactivacion_title">Desactivación</string>
    <string name="reactivar_btn">REACTIVAR</string>
    <string name="confirmar_title">CONFIRMAR</string>
    <string name="error_title">ERROR</string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="estado_label">Estado</string>
    <string name="dato_desconocido">DESCONOCIDO</string>
    <string name="sin_servicio">Sin servicio</string>
    <string name="confirma_operacion">Desea realizar esta operación?</string>
    <string name="no_hay_lineas">No existen lineas</string>
    <string name="ingresar_nro_linea">Ingrese un número de línea</string>
    <string name="activacion_lineas_title">Activación de líneas</string>
    <string name="cargando_datos">Cargando datos</string>
    <string name="ahorro_bateria">Las aplicaciones que no se estén utilizando se deben cerrar, de lo contrario, aunque no se vean, están consumiendo energía</string>
    <string name="ver_detalle">Ver detalles</string>
    <string name="label_usuario_activity_login">Usuario</string>
    <string name="hint_usuario_activity_login">CI/Nro Línea</string>
    <string name="label_password_activity_login">Contraseña</string>
    <string name="hint_password_activity_login">Contraseña</string>
    <string name="label_olvidaste_activity_login">olvidaste tu contraseña</string>
    <string name="label_no_usuario_activity_login">¿No tenés usuario para MiMundo?</string>
    <string name="label_crear_cuenta_login">crear una cuenta</string>
    <string name="button_ingresar_activity_login">INGRESAR</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_facebook_activity_login">Ingresa con Facebook</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="error_token_session_invalido">No se encontraron sesiones activas para el token.</string>
    <string name="error_password_invalido">Debe ingresar una contraseña válida</string>
    <string name="error_usuario_invalido">Debe ingresar un usuario válido</string>
    <string name="login_error_desconocido">Error, intente de nuevo</string>
    <string name="alta_usuario_title">Creación de usuario</string>
    <string name="alta_usuario_confirmar_correo">Debe confirmar el correo electronico</string>
    <string name="alta_usuario_ingresar_linea">Debe ingresar un numero de linea</string>
    <string name="alta_usuario_confirmar_password">Debe confirmar la contraseña</string>
    <string name="alta_usuario_ingresar_password">Debe ingresar la contraseña</string>
    <string name="alta_usuario_ingresar_captcha">Debe ingresar el captcha</string>
    <string name="alta_usuario_ingresar_pin">Debe ingresar el pin</string>
    <string name="alta_usuario_error_password">Las contraseñas no coinciden</string>
    <string name="alta_usuario_pin_enviado">Se le ha enviado un Pin</string>
    <string name="alta_usuario_error_envio_pin">Problema al enviar el pin</string>
    <string name="alta_usuario_error_creacion">Error en la creacion de Usuario</string>
    <string name="alta_usuario_error_server_creacion">La respuesta del CAPTCHA es incorrecta</string>
    <string name="alta_usuario_creacion_exitosa">El Usuario se ha creado exitosamente</string>
    <string name="alta_usuario_error_activacion">Error al activar el Usuario</string>
    <string name="alta_usuario_validar_linea">Validar linea</string>
    <string name="alta_usuario_hint_linea">número de linea</string>
    <string name="alta_usuario_hint_pin">PIN</string>
    <string name="alta_usuario_hint_email">correo electrónico</string>
    <string name="alta_usuario_hint_codigo">código</string>
    <string name="alta_usuario_hint_password">contraseña</string>
    <string name="alta_usuario_hint_confirma_password">confirmar contraseña</string>
    <string name="alta_usuario_btn_aceptar">Aceptar</string>
    <string name="alta_usuario_btn_rechazar">RECHAZAR</string>
    <string name="alta_usuario_acuerdo_title">ACUERDO</string>
    <string name="alta_usuario_validacion_title">VALIDACIÓN</string>
    <string name="alta_usuario_btn_crear_linea">CREAR LINEA</string>
    <string name="pin_sesion_gestion_saldo">Por favor introduzca su pin</string>
    <string name="pin_sesion_hint_edit_text">Ingrese su PIN</string>
    <string name="button_pin_validacion">Continuar</string>
    <string name="enviar_reclamo">Enviar</string>
    <string name="nombres_apellidos_label">Nombres y Apellidos</string>
    <string name="email_label">Email</string>
    <string name="nro_linea_label">Número de linea</string>
    <string name="sugerencias_label">Dejanos tu consulta</string>
    <string name="titulo_estado">ESTADO DEL SERVICIO</string>
    <string name="recarga_description_1">Este servicio tiene límites, es decir, puede solicitar hasta 5 veces una
        recarga de saldo, ó hasta 50% de su abono por ciclo de facturación.</string>
    <string name="recarga_description_2">Al cancelar la factura este ciclo se renueva.</string>
    <string name="recarga_contrafactura_title">RECARGA CONTRA FACTURA</string>
    <string name="backtones_cancelar">Cancelar</string>
</resources>