<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray50">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_sesion_gestion_saldo"
            android:textSize="20dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/pin_sesion_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:hint="@string/pin_sesion_hint_edit_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pin_sesion_boton_cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backtones_cancelar"/>

            <Button
                android:id="@+id/pin_sesion_boton_continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_pin_validacion"/>

        </LinearLayout>



    </LinearLayout>

</FrameLayout>