<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_login"
    android:clickable="false">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/fondo_login"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ProgressBar
        android:id="@+id/progressbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/fondo_login"
        android:indeterminate="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="64dp"
            android:background="@color/fondo_login"
            android:hint="@string/alta_usuario_hint_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <View
            android:id="@+id/divisor_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/password"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/white" />

        <EditText
            android:id="@+id/confirma_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divisor_1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/fondo_login"
            android:hint="@string/alta_usuario_hint_confirma_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/confirma_password"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@color/white" />

        <RelativeLayout
            android:id="@+id/contenedor_botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/wrap_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="@color/fondo_login">

                    <TextView
                        android:id="@+id/btn_aceptar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?selectableItemBackground"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/alta_usuario_btn_aceptar"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>